--- a/RisckTrack.WEB/RisckTrack.WEB.csproj
+++ b/RisckTrack.WEB/RisckTrack.WEB.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IKVM" Version="8.12.0" />
+    <PackageReference Include="NServiceBus.Testing" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
