--- a/RisckTrack.WEB/RisckTrack.WEB.csproj
+++ b/RisckTrack.WEB/RisckTrack.WEB.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IKVM" Version="8.12.0" />
     <PackageReference Include="NServiceBus.Testing" Version="9.0.1" />
   </ItemGroup>
